--- a/anagrams.tt
+++ b/anagrams.tt
@@ -18,7 +18,7 @@ function calculate_stats( wordidx ) {
 	while <( widx wlen ) {
 		let sidx = &( $chr( word widx ) 31 );
 		set [ stat sidx ] = +( [ stat sidx ] 1 );
-		let widx = +( widx 1 );
+		inc widx;
 	}
 	# Convert stat array to string.
 	let word = $sub( stat 0 32 );
@@ -27,7 +27,7 @@ function calculate_stats( wordidx ) {
 	while <( widx 32 ) {
 		let hash = +( *( hash 3 ) $chr( word widx ) );
 		set [ stat widx ] = 0;
-		let widx = +( widx 1 );
+		inc widx;
 	}
 	let hash = &( hash 0xFFFF );
 	# Store stat-string/hash tuple.
@@ -51,7 +51,7 @@ function parse_words( file ) {
 			}
 			let offset = +( idx 1 );
 		}
-		let idx = +( idx 1 );
+		inc idx;
 	}
 	return wordcount;
 }
@@ -76,7 +76,7 @@ function find_most_anagrams( wordcount ) {
 			let anaidx = wordidx;
 			let anacount = count;
 		}
-		let wordidx = +( wordidx 1 );
+		inc wordidx;
 	}
 	return anaidx;
 }
