Tweak line-number expression.

--- a/test.tt
+++ b/test.tt
@@ -99,7 +99,7 @@ function testline() {
 	let x = $line( ${-} );
 	let y = $line( ${-} );
 	call assert( =( -( y x ) 1 ), $line( ${-} ) );
-	try { call $line( 0 ); } catch e {}
+	try { call $line( a ); } catch e {}
 	call assert( e, $line( ${-} ) );
 }
 
